# AsQu

./: .gitignore  README.ko.md  README.md  config.json
app/: package-lock.json  package.json
app/frontend/js/: app.js
app/src/: index.html  lib.rs  state.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/css/: style.css
app/src/js/: app.js  events.js  render-history.js  render-inspector.js  render-question.js  render-sidebar.js  state.js  tauri-bridge.js
app/src/mcp/: tools.rs  transport.rs
app/src/ui/: commands.rs  window.rs
plugin/skills/deep-dive/: SKILL.md
plugin/skills/guide/: SKILL.md
server/: package-lock.json  package.json  tsconfig.json
server/src/: config.ts  index.ts  logger.ts  mcp-server.ts  pipe-client.ts  question-store.ts  tauri-launcher.ts  types.ts
