[package]
name = "asqu"
version = "0.0.1"
edition = "2021"

[lib]
name = "asqu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "asqu"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }


[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
